--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/your-user/repo-url.git"
+    "url": "https://github.com/Fortune-Muhumuza/arraypercentagefinder.git"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
